--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,135 @@
+/* ELEMENTS */
+html {
+  min-height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Roboto Condensed", sans-serif;
+  background: url(/img/bg.jpg);
+  background-size: 100%;
+  background-position: top;
+  background-color: #95e8f3;
+  min-height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+img {
+  height: 100%;
+  width: 100%;
+}
+
+div {
+  font-size: 20px;
+  font-weight: 400;
+}
+
+form {
+  padding: 20px;
+  margin-top: 60px;
+}
+
+form button,
+form h5 {
+  margin: 20px 0;
+}
+
+input[type="text"]:not(.browser-default):focus:not([readonly]),
+input[type="email"]:not(.browser-default):focus:not([readonly]),
+input[type="password"]:not(.browser-default):focus:not([readonly]),
+textarea.materialize-textarea:focus:not([readonly]) {
+  border-color: #ec407a;
+  box-shadow: none;
+}
+
+input[type="text"]:not(.browser-default):focus:not([readonly]) + label,
+textarea.materialize-textarea:focus:not([readonly]) + label,
+input[type="email"]:not(.browser-default):focus:not([readonly]) + label,
+input[type="password"]:not(.browser-default):focus:not([readonly]) + label {
+  color: #ec407a !important;
+}
+
+/* FONT STYLES */
+.small-text {
+  font-size: 16px;
+}
+
+.bold {
+  font-weight: 700 !important;
+  font-weight: bold !important;
+  font-size: 24px !important;
+}
+
+/* SPACIAL CLASSES */
+.card .card-content {
+  padding: 16px;
+}
+
+.pad-0 {
+  padding-right: 0 !important;
+  padding-left: 0 !important;
+}
+
+.opacity {
+  opacity: 0.9;
+}
+
+.message-input {
+  display: inline-flex;
+}
+
+.no-margin {
+  margin: 0;
+}
+
+.container {
+  width: 100%;
+}
+
+.message-list,
+.notifications {
+  height: 250px;
+  overflow: scroll;
+}
+
+.game-details {
+  padding: 20px;
+}
+
+.message-input {
+  display: flex;
+}
+
+.input-field {
+  width: 100%;
+}
+
+.list-container {
+  height: 150px;
+  width: 100%;
+  overflow: hidden;
+  border: 1px solid grey;
+}
+
+.game-summary {
+  height: 150px;
+}
+
+.mar-auto {
+  margin: auto !important;
+  padding-top: 16px;
+}
+
+@media screen and (max-width: 1024px) {
+  .brand-logo {
+    left: 50px !important;
+  }
+}
+
+.leaveGameButton {
+  margin-left: 15px;
+}
+
+.gameActionButtonContainer {
+  margin-bottom: 10px;
 }
