--- a/src/index.css
+++ b/src/index.css
@@ -156,3 +156,8 @@ input[type="password"]:not(.browser-default):focus:not([readonly]) + label {
 a:hover {
   color: #fff !important;
 }
+
+.pad-0 {
+  padding: 0;
+  margin: 0;
+}
