--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ input[type="password"]:not(.browser-default):focus:not([readonly]) + label {
 
 .container.section,
 .container.dashboard {
-  margin-top: 50px;
+  margin-top: 64px;
   z-index: 0;
 }
 
@@ -166,4 +166,19 @@ a:hover {
 
 .inlineBlock {
   display: inline-block !important;
+}
+
+.mapContainer {
+  width: 100vw;
+  height: calc(100vh - 64px);
+  margin-top: 64px;
+}
+
+.mapMarker {
+  background: red;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  border: 2px solid white;
+  box-shadow: 0px 1px 2px black;
 }
