--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ div {
 
 form {
   padding: 20px;
-  margin-top: 60px;
+  margin-top: 80px;
 }
 
 form button,
@@ -165,6 +165,10 @@ a:hover {
 
 .padLeft-0 {
   padding-left: 0 !important;
+}
+
+.padLeft-20 {
+  padding-left: 20px;
 }
 
 .inlineBlock {
