--- a/src/components/games/MapMarker.css
+++ b/src/components/games/MapMarker.css
@@ -1,5 +1,4 @@
 .mapMarker {
-  background: red;
   width: 20px;
   height: 20px;
   border-radius: 100%;
@@ -7,20 +6,68 @@
   box-shadow: 0px 1px 2px black;
 }
 
-.mapMarker.category-4 {
+.mapMarker.category-1 {
+  background: orange;
+}
+.mapMarker.category-2 {
+  background: blue;
+}
+.mapMarker.category-3 {
   background: green;
+}
+.mapMarker.category-4 {
+  background: purple;
+}
+.mapMarker.category-5 {
+  background: red;
+}
+.mapMarker.category-6 {
+  background: white;
 }
 
 .mapMarker-hoverBox {
   background: black;
   color: white;
   border: 1px solid white;
-  border-radius: 5px;
-  min-width: 50px;
-  padding: 5px;
-  font-size: 10px;
+  width: 100px;
+  height: 50px;
+  padding: 10px;
+  font-size: 14px;
+  text-align: center;
+  margin: 5px auto;
+  border-radius: 40px;
+  box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
+    -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
+  cursor: pointer;
+  transition: 0.4s;
+  text-decoration: none;
+  opacity: 0.9;
+  box-sizing: content-box;
 }
 
-.category-4 ~ .mapMarker-hoverBox {
+.category-1 ~ .mapMarker-hoverBox {
+  border: 3px solid orange;
+}
+.category-2 ~ .mapMarker-hoverBox {
+  border: 3px solid blue;
+}
+.category-3 ~ .mapMarker-hoverBox {
   border: 3px solid green;
+}
+.category-4 ~ .mapMarker-hoverBox {
+  border: 3px solid purple;
+}
+.category-5 ~ .mapMarker-hoverBox {
+  border: 3px solid red;
+}
+.category-6 ~ .mapMarker-hoverBox {
+  border: 3px solid white;
+}
+
+.mapMarker-hoverBox:hover {
+  transform: scale(1.2, 1.2);
+  box-shadow: 5px 5px 20px 10px rgba(0, 0, 0, 0.25),
+    -5px -5px 20px 10px rgba(0, 0, 0, 0.22);
+  text-decoration: none;
+  z-index: 10000 !important;
 }
