--- a/src/components/games/MapMarker.css
+++ b/src/components/games/MapMarker.css
@@ -29,7 +29,7 @@
   background: black;
   color: white;
   border: 1px solid white;
-  width: 100px;
+  width: 150px;
   height: 50px;
   padding: 10px;
   font-size: 14px;
@@ -40,7 +40,7 @@
     -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
   cursor: pointer;
   transition: 0.4s;
-  text-decoration: none;
+  text-decoration: none !important;
   opacity: 0.9;
   box-sizing: content-box;
 }
@@ -68,6 +68,6 @@
   transform: scale(1.2, 1.2);
   box-shadow: 5px 5px 20px 10px rgba(0, 0, 0, 0.25),
     -5px -5px 20px 10px rgba(0, 0, 0, 0.22);
-  text-decoration: none;
-  z-index: 10000 !important;
+  text-decoration: none !important;
+  z-index: 1000 !important;
 }
