--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto Condensed", sans-serif;
-  background: url(/img/bg.jpg);
+  background: url(/public/img/bg.jpg);
   background-size: 100%;
   background-position: top;
   background-color: #95e8f3;
