more minor edit game edits

--- a/src/index.css
+++ b/src/index.css
@@ -147,6 +147,10 @@ input[type="password"]:not(.browser-default):focus:not([readonly]) + label {
   margin-left: 15px;
 }
 
+.editGameButton {
+  margin-left: 15px;
+}
+
 a:hover {
   color: #fff !important;
 }
