--- a/src/components/games/map/MapMarker.css
+++ b/src/components/games/map/MapMarker.css
@@ -1,41 +1,21 @@
 .mapMarker {
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   border-radius: 100%;
-  border: 2px solid white;
-  box-shadow: 0px 1px 2px black;
-}
-
-.mapMarker.category-classic {
-  background: orange;
-}
-.mapMarker.category-talent {
-  background: blue;
-}
-.mapMarker.category-sport {
-  background: green;
-}
-.mapMarker.category-digital {
-  background: purple;
-}
-.mapMarker.category-party {
-  background: red;
-}
-.mapMarker.category-tabletop {
-  background: white;
+  border: 2px solid #ffffff;
+  box-shadow: 0px 1px 2px #000000;
 }
 
 .mapMarker-hoverBox {
-  background: black;
-  color: white;
-  /* border: 1px solid white; */
+  background: #000000;
+  color: #ffffff;
   width: 150px;
-  height: 50px;
-  padding: 10px;
+  height: 30px;
+  padding: 6px 2px;
   font-size: 14px;
   text-align: center;
-  margin: 5px auto;
-  border-radius: 40px;
+  margin: 4px auto;
+  border-radius: 20px;
   box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
     -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
   cursor: pointer;
@@ -47,25 +27,6 @@
   position: relative;
 }
 
-.category-classic ~ a > .mapMarker-hoverBox {
-  border: 3px solid orange;
-}
-.category-talent ~ a > .mapMarker-hoverBox {
-  border: 3px solid blue;
-}
-.category-sport ~ a > .mapMarker-hoverBox {
-  border: 3px solid green;
-}
-.category-digital ~ a > .mapMarker-hoverBox {
-  border: 3px solid purple;
-}
-.category-party ~ a > .mapMarker-hoverBox {
-  border: 3px solid red;
-}
-.category-tabletop ~ a > .mapMarker-hoverBox {
-  border: 3px solid white;
-}
-
 .mapMarker-hoverBox:hover {
   transform: scale(1.2, 1.2);
   box-shadow: 5px 5px 20px 10px rgba(0, 0, 0, 0.25),
@@ -73,4 +34,41 @@
   text-decoration: none !important;
   z-index: 1001;
   position: relative;
+}
+
+.mapMarker.category-classic {
+  background: #fa8c16;
+}
+.category-classic ~ a > .mapMarker-hoverBox {
+  border: 2px solid #fa8c16;
+}
+.mapMarker.category-talent {
+  background: #1890ff;
+}
+.category-talent ~ a > .mapMarker-hoverBox {
+  border: 2px solid #1890ff;
+}
+.mapMarker.category-sport {
+  background: #52c41a;
+}
+.category-sport ~ a > .mapMarker-hoverBox {
+  border: 2px solid #52c41a;
+}
+.mapMarker.category-digital {
+  background: #722ed1;
+}
+.category-digital ~ a > .mapMarker-hoverBox {
+  border: 2px solid #722ed1;
+}
+.mapMarker.category-party {
+  background: #f5222d;
+}
+.category-party ~ a > .mapMarker-hoverBox {
+  border: 2px solid #f5222d;
+}
+.mapMarker.category-tabletop {
+  background: #eb2f96;
+}
+.category-tabletop ~ a > .mapMarker-hoverBox {
+  border: 2px solid #eb2f96;
 }
