--- a/src/components/layout/index.css
+++ b/src/components/layout/index.css
@@ -4,20 +4,31 @@
 
 .navItem-active {
   z-index: 1;
-  background-color: red;
+  background-color: #03b2cb;
 }
 
 .navbar a:hover,
 .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: #03b2cb;
+}
+
+#signoutButton:hover {
+  background-color: #f5222d
+}
+
+a.initialsButton {
+  line-height: 100% !important;
+  width: 100% !important;
+  text-align: center !important;
 }
 
 li.nav-item.dropdown div {
   display: none;
 }
+
 li.nav-item.dropdown:hover div {
   display: block;
-  background-color: black;
+  background-color: #000000;
   opacity: 0.9;
 }
 
@@ -26,22 +37,19 @@ li.nav-item.dropdown:hover div {
   color: white; 
   border: none;
   cursor: pointer;
-  /* text-decoration: underline; */
-  /* padding: 0 1rem !important; */
   display: inline;
-  margin: 0;
-  padding: 0;
+  padding: 0 1rem !important;
 }
 
 @media (max-width: 600px) {
   .nav-link {
-    padding: 0 5px !important;
+    padding: 0 4px !important;
+    font-size: 16px;
   }
 }
 
 li a {
   margin: 0 !important;
-  text-align: center;
 }
 
 .dropdown-menu.dropdown-menu-right {
