--- a/src/components/layout/index.css
+++ b/src/components/layout/index.css
@@ -70,3 +70,9 @@ li a {
   align-content: center;
   align-items: center !important;
 }
+
+@media only screen and (max-width: 600px) {
+  .row .col.s12 {
+    min-width: 100%;
+  }
+}
